[tool.poetry]
name = "sensation-learning"
version = "0.1.0"
description = ""
authors = ["Felix Neumann <felix.maximilian.neumann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
numpy = "1.24.0"
matplotlib = "^3.10.0"
notebook = "^7.3.2"
scikit-learn = "^1.6.0"
ipympl = "^0.9.5"
bpy = "^4.3.0"
numba = "^0.60.0"
umap-learn = "^0.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
